@startuml
skinparam classAttributeIconSize 0
hide circle

title Create Item Class Diagram

class Parser

abstract class Command {
    + execute(inventory: Inventory, ui: Ui, histories: List<String>)
}

class CreateCommand {
    - name: String
    - unit: String
    - minimumThreshold: int
    + execute(inventory: Inventory, ui: Ui, histories: List<String>)
}

class Inventory {
    + addItem(item: InventoryItem)
}

class InventoryItem

class Ui

CreateCommand -|> Command

Parser ..> CreateCommand : creates >
CreateCommand ..> Inventory : uses >
CreateCommand ..> InventoryItem : creates >
CreateCommand ..> Ui : uses >

Inventory "1" *-- "*" InventoryItem : contains >

@enduml
